syntax = "proto3";

option csharp_namespace = "Proto.Notifications.StatisticsData";

import "DTO/trace_data.proto";

service NotificationService {
  rpc SendChangeProductivity(ChangeProductivityNotification) returns (NotificationResponse);
  rpc SendChangeTagSelection(ChangeTagSelectionNotification) returns (NotificationResponse);
  rpc SendStatisticsDataCreated(StatisticsDataCreatedNotification) returns (NotificationResponse);
}

service StatisticsDataNotificationService {
  rpc SubscribeStatisticsDataNotifications(SubscribeRequest) returns (stream StatisticsDataNotification);
}

message StatisticsDataNotification {
  oneof notification {
    ChangeProductivityNotification changeProductivity = 1;
    ChangeTagSelectionNotification changeTagSelection = 2;
    StatisticsDataCreatedNotification statisticsDataCreated = 3;
  }
}

message SubscribeRequest {}

message ChangeProductivityNotification {
  string statisticsDataId = 1;
  bool isProductive = 2;
  bool isNeutral = 3;
  bool isUnproductive = 4;
  TraceDataProto traceData = 5;
}

message ChangeTagSelectionNotification {
  string statisticsDataId = 1;
  repeated string selectedTagIds = 2;
  TraceDataProto traceData = 3;
}

message StatisticsDataCreatedNotification {
  string statisticsDataId = 1;
  bool isProductive = 2;
  bool isNeutral = 3;
  bool isUnproductive = 4;
  repeated string tagIds = 5;
  string timeSlotId = 6;
  TraceDataProto traceData = 7;
}

message NotificationResponse {
  bool success = 1;
}
